core/main/default/objects/ApigeeAuthProvider__mdt/fields/CacheProvider__c.field-meta.xml
<CustomField>
    <fullName>CacheProvider__c</fullName>
    <description>Plateform cache to store the token</description>
    <label>Cache Provider</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>