core/main/default/objects/ApigeeAuthProvider__mdt/fields/CacheProviderKey__c.field-meta.xml
<CustomField>
    <fullName>CacheProviderKey__c</fullName>
    <description>Key to store the token in cache</description>
    <label>Cache Provider Key</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>