core/main/default/objects/ApigeeAuthProvider__mdt/fields/CacheProviderTTL__c.field-meta.xml
<CustomField>
    <fullName>CacheProviderTTL__c</fullName>
    <defaultValue>3500</defaultValue>
    <description>Time To Live for the cache</description>
    <label>Cache Provider TTL</label>
    <precision>6</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>