core/main/default/objects/ApigeeAuthProvider__mdt/fields/CallbackUrl__c.field-meta.xml
<CustomField>
    <fullName>CallbackUrl__c</fullName>
    <description>Auth callback URL</description>
    <label>Callback Url</label>
    <length>255</length>
    <type>Text</type>
</CustomField>