core/main/default/objects/ApigeeAuthProvider__mdt/fields/ProviderName__c.field-meta.xml
<CustomField>
    <fullName>ProviderName__c</fullName>
    <description>Name of the Auth Provider</description>
    <label>ProviderName</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>